appId: com.example.handyhouse
tags:
  - functional
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: "Shop"
    timeout: 60000
- tapOn:
    id: "tab-cart"
- assertVisible: "Your cart is empty.*"
